# 19.16

./: CMakeLists.txt  README.md  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/data_structures/matrix/: matrix.c
